0.11.2/_sources/_autosummary/baybe.recommenders.pure.nonpredictive.clustering.GaussianMixtureClusteringRecommender.rst.txt
GaussianMixtureClusteringRecommender
====================================

.. currentmodule:: baybe.recommenders.pure.nonpredictive.clustering

.. autoclass:: GaussianMixtureClusteringRecommender
   :members:                              
   :show-inheritance:                 
   :inherited-members:

   
   
   .. rubric:: Public methods

   .. autosummary::
   
      ~GaussianMixtureClusteringRecommender.__init__
      ~GaussianMixtureClusteringRecommender.recommend
   
   

   
   
   .. rubric:: Public attributes and properties

   .. autosummary::
   
      ~GaussianMixtureClusteringRecommender.compatibility
      ~GaussianMixtureClusteringRecommender.model_cluster_num_parameter_name
      ~GaussianMixtureClusteringRecommender.model_params
      ~GaussianMixtureClusteringRecommender.allow_repeated_recommendations
      ~GaussianMixtureClusteringRecommender.allow_recommending_already_measured
      ~GaussianMixtureClusteringRecommender.allow_recommending_pending_experiments
   
   